fixed phone on mobile

--- a/css/contact.css
+++ b/css/contact.css
@@ -303,6 +303,12 @@ form p{
     font-size: .9em;
 }
 
+.phone {
+    text-decoration: none;
+    color: #fff;
+    opacity: .65;
+}
+
 
 /* Tablets */
 @media screen and (min-width: 500px) and (max-width: 1024px) {
